# https-server-mb

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  TODO.md  apm.sh  create-certificates.sh  env.sh  install-libhttpserver.sh  run-client-tests.sh  run-server.sh  run-system-monitor.sh  run-tests.sh  travis.yml
Client/: CMakeLists.txt  Makefile  README.md  clang-toolchain.cmake  latency.py  request-throughput.py  server-test.py
Client/Includes/: Include.hpp
Client/Sources/: Main.cpp
Monitoring/: data-throughput.sh
Server/: CMakeLists.txt  Makefile  README.md  clang-toolchain.cmake  compile_flags.txt
Server/Includes/: Authorization.hpp  Data.hpp  FileResource.hpp  HelloResource.hpp  Include.hpp  Logger.hpp  MimeResource.hpp  PerformanceMonitor.hpp  Resources.hpp  RootResource.hpp  ServerOptions.hpp
Server/Sources/: Authorization.cpp  Logger.cpp  Main.cpp  PerformanceMonitor.cpp  ServerOptions.cpp
Server/Tests/: TestServerOptions.cpp  TestServerOptions.hpp  TestSuite.cpp  TestSuite.hpp
Static/: example.txt
System-Monitoring/: apm.sh  data-throughput.sh  request-backlog.sh
